# LinuxCPPTest

./: CMakeLists.txt
include/: QuickStart.h
src/: QuickStart.cpp
test/: CMakeLists.txt  QuickStartTest.cpp
